# hardware-test-framework

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md
config/json/: device.jsonc  function.jsonc  platform.json  test.jsonc
src/: main.c  test_logger
src/common/: logger.c  logger.h
src/config/: config-manager.c  config-manager.h  device.c  device.h  function.c  function.h  parser.h  platform.c  platform.h  test.c  test.h
src/device-manager/: dm.c  dm.h
src/services/: dm.c  dm.h  function-manager.c  function-manager.h  plugin-manager.c  plugin-manager.h  resource-manager.c  resource-manager.h  runtime.c  runtime.h  test-engine.c  test-engine.h  test-manager.c  test-manager.h  test-reporter.c  test-reporter.h  test-scheduler.c  test-scheduler.h
src/utils/: plugin.h  safe_string.h  util.c  util.h
src/validation/: test-operation.h  validation-system.c  validation-system.h
test/: test_logger.c
